--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,23 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=7.1.3",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
-        "maatwebsite/excel": "~2.0"
+        "php": "^8.2.12",
+        "illuminate/support": "^10.48.4",
+        "laravel/framework": "^10.0",
+        "laravel/passport": "^11.8",
+        "laravel/tinker": "^2.8.2",
+        "laravel/ui": "^4.5",
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "1.0",
+        "yajra/laravel-datatables-oracle": "~10.0"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
+        "beyondcode/laravel-dump-server": "^1.9.0",
         "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5",
-        "maatwebsite/excel": "~2.0"
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.0",
+        "spatie/laravel-ignition": "^2.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -50,7 +53,7 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
